# cpp-project-template

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: main.cpp
